2017-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  support/regression/tests/bug-2370.c:
	  Fix various --reserve-regs-iy issues, including bug #2370 and most of bug #2674.

2017-10-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen:
	  Fix a --reserve-regs-iy bug in 32/64-bit comparisons.
	* src/stm8/peeph.def,
	  src/stm8/gen.c:
	  Minor improvements for stm8.

2017-10-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  __z88dk_fastcall function pointer support for --reserve-regs-iy.

2017-10-24 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Fix broken references.
	* src/z80/gen.c:
	  Fix various --reserve-regs-iy issues, including bugs #2400, #2278, #2380.

2017-10-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c:
	  Debug info for partially spilt variables.
	* doc/sdccman.lyx,
	  doc/Makefile.in:
	  Fix SDCC version in manual title for out-of-tree build.
	* src/SDCCast.c,
	  support/regression/tests/bug-2632.c:
	  Fix bug #2632.

2017-10-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c:
	  Infrastructure for debug info for partially spilt variables.
	* src/SDCCmain.c:
	  Document command line options in help output.

2017-10-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve handling of a in cast.
	* src/z80/gen.c:
	  Improve &.
	* src/z80/gen.c:
	  Improve |.

2017-10-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Optimize ifx on 16-bit pointer read.
	* src/z80/peeph-z80.def:
	  Improve peephole rules for caching 0 in a.

2017-10-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  Improve subtraction of global variables.
	* src/z80/gen.c:
	  Simplify stack adjustment.
	* src/z80/gen.c:
	  Improve 32-bit increment.
	* src/z80/ralloc2.cc:
	  Improve handling of a in negation.
	* src/z80/gen.c:
	  Improve cast to signed long and signed long long.