@@ -95,10 +95,7 @@ esac
 
 # Checking for functions
 # ===========================================================================
-AC_CHECK_FUNCS(strerror)
-AC_CHECK_FUNCS(vsnprintf snprintf vsprintf mkstemp)
-AC_CHECK_FUNCS(strndup)
-AC_CHECK_FUNCS(setrlimit)
+AC_CHECK_FUNCS(strerror mkstemp strndup setrlimit)
 
 
 # Macro definitions
