@@ -125,18 +125,10 @@ vformat_string(const char *format, va_list ap)
     msg = NULL;
   return(msg);
 #else
-#  ifdef HAVE_VSNPRINTF
   msg = (char*)malloc(80*25);
   vsnprintf(msg, 80*25, format, ap);
-  return(msg);
-#  else
-#    ifdef HAVE_VPRINTF
-  msg = (char*)malloc(80*25);
-  vsprintf(msg, format, ap); /* Dangerous */
-  return(msg);
-#    endif
-#  endif
 #endif
+  return(msg);
 }
 
 char *
